sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value False
  var end:Boolean = False
                    ^AlgBubbleSort1:5: error: not found: value True
    end = True
          ^AlgBubbleSort1:9: error: not found: value False
        end = False
              ^