sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var end:Boolean = False
  while (!end) {
    end = True
    for (i <- 0 to getNombreValeurs() - 1) {
      if (getValeur(i) > getValeur(i+1)) {
        echange(i,i+1)
        end = False
      }
    }
  }
}
